#18475 closed bug (fixed)

Page fault in media_addon_server on startup

Reported by: mmu_man Owned by: nobody
Priority: normal Milestone: Unscheduled
Component: Drivers/Audio/emuxki Version: R1/Development
Keywords: audio Cc:
Blocked By: Blocking:
Platform: All

Description

Just updated my AthlonXP box to hrev57109 from hrev57019 and now on startup media_addon_server consistently crashes in the "multi_audio audio output" thread, inside MultiAudioNoce::_WriteZeros():

write access attempted on write-protected area 0x29cf at 0x816ef000
vm_page_fault: vm_soft_fault returned error 'Permission denied' on fault at 0x816ef000, ip 0xeb092c, write 1,
user 1, exec 0, thread 0x2a4
debug_server: Thread 676 entered the debugger: Segment violation
stack trace, current PC 0xeb092c  </boot/system/add-ons/media/hmulti_audio.media_addon> _WriteZeros__14MultiA
udioNodeR10node_inputUl + 0x238:
  (0x732ac118)  0xeb0508  </boot/system/add-ons/media/hmulti_audio.media_addon> _OutputThread__14MultiAudioNo
de + 0x20c
  (0x732ac1c8)  0xeb14e7  </boot/system/add-ons/media/hmulti_audio.media_addon> _OutputThreadEntry__14MultiAu
dioNodePv + 0x1f
  (0x732ac1f8)  0x18db249  </boot/system/lib/libroot.so> thread_entry + 0x29

I have both the Emuxki and HD Audio addons loaded, but the Emuxki output is selected.

Additionally Debugger seems to want to crash as well…

Change History (6)

comment:1 by mmu_man, 20 months ago

Reminiscent of #1328

comment:2 by korli, 20 months ago

Component: - GeneralDrivers/Audio/emuxki
Version: R1/beta4R1/Development

comment:4 by korli, 20 months ago

Should be better after hrev57114.

comment:5 by mmu_man, 20 months ago

Fixed, thanks!

comment:6 by mmu_man, 20 months ago

Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.