emuxki: use user_memcpy to read/write the user buffers.

* map registers kernel only.
* alloc buffer user only.
* may help with #18475 and #18467

Change-Id: I3f739b98e0ec2d07e83c15a614b8b1d1722025e2
Reviewed-on: https://review.haiku-os.org/c/haiku/+/6657
Reviewed-by: Adrien Destugues <pulkomandy@pulkomandy.tk>
Tested-by: Commit checker robot <no-reply+buildbot@haiku-os.org>